Update App Download Wording

--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
                 <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
                 <a class="resumeButton" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/normant/60-minute'});return false;">Schedule Chat</a>
                 <!-- Calendly link widget end -->
-                <button class="resumeButton" onclick="window.location.href='itms-services://?action=download-manifest&url=https://normant.me/manifest.plist'">TerrierCheck App</button>
+                <button class="resumeButton" onclick="window.location.href='itms-services://?action=download-manifest&url=https://normant.me/manifest.plist'">HappyFlock App</button>
             </div>
 
             <div class="copyright">© Norman A. Toro Vega | 2020</div>
