--- a/index.html
+++ b/index.html
@@ -142,6 +142,18 @@
         <div class="row" style="justify-content: center;">
 
         <div class="card shadow">
+            <img class="card-img-top" src="images/happyflock.png" alt="Happy Flock Logo">
+            <div class="card-body container-fluid" style="display: flex;">
+                <div class="row" style="align-items: flex-end;">
+                    <h5 class="card-title" style="color: black; width: 60%; margin: 5%;">Happy Flock #UltraHacks 3rd Place Winner</h5>
+                    <a href="https://dribbble.com/shots/14411179-HappyFlocks-Daily-Twitter-Inspiration" class="stretched-link"></a>
+                    <span class="fas fa-arrow-circle-right fa-2x col-sm"
+                        style="color: black; width: 20%; margin-left: 5%;"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="card shadow">
             <img class="card-img-top" src="images/veranahealth.png" alt="Verana Health Logo">
             <div class="card-body container-fluid" style="display: flex;">
                 <div class="row" style="align-items: flex-end;">
@@ -262,10 +274,21 @@
 
         <div class="sectionHeading left">
             <h1>Campus Involvement</h1>
-            <h6>I love working to further my campus community. As Co-President of BUHPC, I lead workshops on code
-                optimization. As SHPE PR Chair, I drive all brand and marketing efforts.</h6>
+            <h6>I love working to further my campus community. As Co-Founder of ProductVision, I lead BU's 1st Product Management club. As SHPE PR Chair, I drive all brand and marketing efforts.</h6>
         </div>
         <div class="row" style="justify-content: center;">
+            <div class="square shadow PVBlack">
+                <div class="squareContent">
+                    <img style="width: 100%;" src="images/highlight-productvision.png" alt="">
+                </div>
+            </div>
+
+            <div class="square shadow INNOVPurple">
+                <div class="squareContent">
+                    <img style="width: 100%;" src="images/highlight-innovationcouncil.png" alt="">
+                </div>
+            </div>
+
             <div class="square shadow BUred">
                 <div class="squareContent">
                     <img style="width: 100%;" src="images/highlight-buhpc.png" alt="">
