--- a/about.html
+++ b/about.html
@@ -79,12 +79,12 @@
 
             <div class="aboutMeText">
                 Hi! 👋 I’m Norman, an innovator born and raised in the island of Puerto Rico. 🇵🇷 Currently a senior at Boston University studying Computer Engineering and Technology Innovation, I’m passionate about the intersection of technology, business, and design.
-                <br><br>
-                My path to tech originally started in the research field, conducting award-winning research in Computational Biology and Renewable Energy as a two-time Intel Science & Engineering Fair Finalist.
-                <br><br>
-                During my freshman year of college, I formed part of the Puerto Rico Digital Transformation Initiative where I developed a roadmap for providing modern citizen-centered services through a unified online government platform. This experience made me fall in love with everything Product Management and Design, learning everything from customer interviews, user journeys, all the way to wireframes and proof-of-concepts.
-                <br><br>
-                In Spring 2020 I founded “My Science Guide”, the first online research mentorship platform for Latin America through the Spark! innovation Fellowship. I led a team of developers and designers from ideation to prototyping and up to our beta launch 🚀 Now I’m currently a Product Manager Intern at Verana Health, a Healthcare startup based in San Francisco that’s using big data insights to accelerate medical research 🏥 What’s next for the future? I aspire to lead the next big product launches in the tech industry as a Product Manager 👨🏻‍💻
+                    <br><br>
+                    My path to tech originally started in the research field, conducting award-winning research in Computational Biology and Renewable Energy as a two-time Intel Science & Engineering Fair Finalist.
+                    <br><br>
+                    During my freshman year of college, I formed part of the Puerto Rico Digital Transformation Initiative where I developed a roadmap for providing modern citizen-centered services through a unified online government platform. This experience made me fall in love with everything Product Management and Design, learning everything from customer interviews, user journeys, all the way to wireframes and proof-of-concepts.
+                    <br><br>
+                    In Spring 2020 I founded “My Science Guide”, the first online research mentorship platform for Latin America through the Spark! innovation Fellowship. I led a team of developers and designers from ideation to prototyping and up to our beta launch 🚀 Now I’m currently a Product Manager Intern at Verana Health, a Healthcare startup based in San Francisco that’s using big data insights to accelerate medical research 🏥 <br><br>🔜 What’s next for the future? I’ll be joining Apple as an Engineering Product Manager in the Siri Rotational Program on June 2021 right after graduation 🍎 
             </div>
         
             <div class="socialIcons">
@@ -102,7 +102,7 @@
                 <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
                 <a class="resumeButton" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/normant/30-minute'});return false;">Schedule Chat</a>
                 <!-- Calendly link widget end -->
-                <button class="resumeButton" onclick="window.location.href='https://testflight.apple.com/join/EWeRi6cd'">HappyFlock App</button>
+                <!-- <button class="resumeButton" onclick="window.location.href='https://testflight.apple.com/join/EWeRi6cd'">HappyFlock App</button> -->
             </div>
 
             <div class="copyright">© Norman A. Toro Vega | 2020</div>
@@ -125,7 +125,7 @@
                     <br><br>
                     During my freshman year of college, I formed part of the Puerto Rico Digital Transformation Initiative where I developed a roadmap for providing modern citizen-centered services through a unified online government platform. This experience made me fall in love with everything Product Management and Design, learning everything from customer interviews, user journeys, all the way to wireframes and proof-of-concepts.
                     <br><br>
-                    In Spring 2020 I founded “My Science Guide”, the first online research mentorship platform for Latin America through the Spark! innovation Fellowship. I led a team of developers and designers from ideation to prototyping and up to our beta launch 🚀 Now I’m currently a Product Manager Intern at Verana Health, a Healthcare startup based in San Francisco that’s using big data insights to accelerate medical research 🏥 What’s next for the future? I aspire to lead the next big product launches in the tech industry as a Product Manager 👨🏻‍💻
+                    In Spring 2020 I founded “My Science Guide”, the first online research mentorship platform for Latin America through the Spark! innovation Fellowship. I led a team of developers and designers from ideation to prototyping and up to our beta launch 🚀 Now I’m currently a Product Manager Intern at Verana Health, a Healthcare startup based in San Francisco that’s using big data insights to accelerate medical research 🏥 <br><br>🔜 What’s next for the future? I’ll be joining Apple as an Engineering Product Manager in the Siri Rotational Program on June 2021 right after graduation 🍎 
                 </div>
 
                 <div class="socialIcons">
