--- a/index.html
+++ b/index.html
@@ -142,6 +142,18 @@
         <div class="row" style="justify-content: center;">
 
         <div class="card shadow">
+            <img class="card-img-top" src="images/apple.png" alt="Apple Logo">
+            <div class="card-body container-fluid" style="display: flex;">
+                <div class="row" style="align-items: flex-end;">
+                    <h5 class="card-title" style="color: black; width: 60%; margin: 5%;">Incoming Siri EPM at Apple (June 2021)</h5>
+                    <a href="https://www.apple.com/siri/" class="stretched-link"></a>
+                    <span class="fas fa-arrow-circle-right fa-2x col-sm"
+                        style="color: black; width: 20%; margin-left: 5%;"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="card shadow">
             <img class="card-img-top" src="images/happyflock.png" alt="Happy Flock Logo">
             <div class="card-body container-fluid" style="display: flex;">
                 <div class="row" style="align-items: flex-end;">
@@ -164,7 +176,7 @@
                 </div>
             </div>
         </div>
-        <div class="card shadow">
+        <!-- <div class="card shadow">
             <img class="card-img-top" src="images/terriercheck.png" alt="TerrierCheck Logo">
             <div class="card-body container-fluid" style="display: flex;">
                 <div class="row" style="align-items: flex-end;">
@@ -174,7 +186,7 @@
                         style="color: black; width: 20%; margin-left: 5%;"></span>
                 </div>
             </div>
-        </div>
+        </div> -->
             <div class="card shadow" style="background-color: black !important;">
                 <img class="card-img-top" src="images/spark-logo-square.png" alt="Spark! Fellowship Logo">
                 <div class="card-body container-fluid" style="display: flex;">
