--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="card-body container-fluid" style="display: flex;">
                 <div class="row" style="align-items: flex-end;">
                     <h5 class="card-title" style="color: black; width: 60%; margin: 5%;">Verana Health Fall 2020 Internship</h5>
-                    <a href="in-construction-sign.html" class="stretched-link"></a>
+                    <a href="Technology Innovation Slide Deck.pdf" class="stretched-link"></a>
                     <span class="fas fa-arrow-circle-right fa-2x col-sm"
                         style="color: black; width: 20%; margin-left: 5%;"></span>
                 </div>
