fix+ordering-change

--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
         </div>
 
         <div class="card shadow">
-            <img class="card-img-top" src="images/happyflock.png" alt="Happy Flock Logo">
+            <img class="card-img-top" src="images/veranahealth.png" alt="Verana Health Logo">
             <div class="card-body container-fluid" style="display: flex;">
                 <div class="row" style="align-items: flex-end;">
-                    <h5 class="card-title" style="color: black; width: 60%; margin: 5%;">Happy Flock #UltraHacks 3rd Place Winner</h5>
-                    <a href="https://dribbble.com/shots/14411179-HappyFlocks-Daily-Twitter-Inspiration" class="stretched-link"></a>
+                    <h5 class="card-title" style="color: black; width: 60%; margin: 5%;">Verana Health Fall 2020 Internship</h5>
+                    <a href="vh-slide-deck.pdf" class="stretched-link"></a>
                     <span class="fas fa-arrow-circle-right fa-2x col-sm"
                         style="color: black; width: 20%; margin-left: 5%;"></span>
                 </div>
@@ -166,11 +166,11 @@
         </div>
 
         <div class="card shadow">
-            <img class="card-img-top" src="images/veranahealth.png" alt="Verana Health Logo">
+            <img class="card-img-top" src="images/happyflock.png" alt="Happy Flock Logo">
             <div class="card-body container-fluid" style="display: flex;">
                 <div class="row" style="align-items: flex-end;">
-                    <h5 class="card-title" style="color: black; width: 60%; margin: 5%;">Verana Health Fall 2020 Internship</h5>
-                    <a href="Technology Innovation Slide Deck.pdf" class="stretched-link"></a>
+                    <h5 class="card-title" style="color: black; width: 60%; margin: 5%;">Happy Flock #UltraHacks 3rd Place Winner</h5>
+                    <a href="https://dribbble.com/shots/14411179-HappyFlocks-Daily-Twitter-Inspiration" class="stretched-link"></a>
                     <span class="fas fa-arrow-circle-right fa-2x col-sm"
                         style="color: black; width: 20%; margin-left: 5%;"></span>
                 </div>
